--- a/squad_game_client/pubspec.yaml
+++ b/squad_game_client/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   socket_io_client: ^3.1.4
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
+  cloud_firestore: ^6.1.2
 
 dev_dependencies:
   flutter_test:
