--- a/squad_game_client/android/app/src/main/AndroidManifest.xml
+++ b/squad_game_client/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,30 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">  <!-- Ensure tools namespace is here -->
+
     <application
         android:label="squad_game_client"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- Existing disable for startup provider -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove" />
+
+        <!-- NEW: Remove ProfileInstaller receiver -->
+        <receiver
+            android:name="androidx.profileinstaller.ProfileInstallReceiver"
+            android:permission="android.permission.DUMP"
+            android:exported="false"
+            tools:node="remove" />
+
+        <!-- NEW: Remove ProfileInstaller meta-data initializer -->
+        <meta-data
+            android:name="androidx.profileinstaller.ProfileInstallerInitializer"
+            android:value="androidx.startup"
+            tools:node="remove" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,6 +52,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
