--- a/squad_game_client/android/app/src/main/AndroidManifest.xml
+++ b/squad_game_client/android/app/src/main/AndroidManifest.xml
@@ -1,29 +1,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">  <!-- Ensure tools namespace is here -->
 
+    <!-- NEW: Add these permissions for notifications and FCM -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />  <!-- For Android 13+ -->
+    <uses-permission android:name="android.permission.VIBRATE" />  <!-- For vibration -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />  <!-- For scheduled notifications -->
+
     <application
         android:label="squad_game_client"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
-        <!-- Existing disable for startup provider -->
+        <!-- Disable ProfileInstaller by merging the provider and removing its initializer -->
         <provider
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
-            tools:node="remove" />
-
-        <!-- NEW: Remove ProfileInstaller receiver -->
-        <receiver
-            android:name="androidx.profileinstaller.ProfileInstallReceiver"
-            android:permission="android.permission.DUMP"
             android:exported="false"
-            tools:node="remove" />
+            tools:node="merge">
 
-        <!-- NEW: Remove ProfileInstaller meta-data initializer -->
-        <meta-data
-            android:name="androidx.profileinstaller.ProfileInstallerInitializer"
-            android:value="androidx.startup"
-            tools:node="remove" />
+            <!-- Remove ProfileInstaller meta-data to disable it -->
+            <meta-data
+                android:name="androidx.profileinstaller.ProfileInstallerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+        </provider>
 
         <activity
             android:name=".MainActivity"
@@ -52,7 +53,11 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        
+
+        <!-- NEW: Default notification channel for FCM (customize 'high_importance_channel' if needed) -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="high_importance_channel" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
