--- a/squad_game_client/pubspec.yaml
+++ b/squad_game_client/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
   firebase_messaging: ^16.0.2
-  
+  flutter_local_notifications: ^19.4.2
 
 dev_dependencies:
   flutter_test:
